--- a/style.css
+++ b/style.css
@@ -63,10 +63,12 @@ body {
   align-items: center;
   padding: 0 14px;
   white-space: nowrap;
+  transition: background color 0.5s linear;
 }
 .navigation__item:hover {
   background: #5a5a5a;
   color: #fff;
+  cursor: pointer;
 }
 .rating {
   background: #d9d9d9;
@@ -75,7 +77,13 @@ body {
 .rating__list {
   list-style: none;
   margin: 0;
-  padding: 0;
+  padding: 0 20px 0 0;
+  display: flex;
+  flex-direction: column;
+  position: relative;
+}
+.rating__list > li {
+  margin-bottom: 10px;
 }
 .rating__title {
   color: #c92c1f;
@@ -88,15 +96,438 @@ body {
   text-align: right;
 }
 .rating__pseudo:after {
-  content: '#';
+  content: '☐';
+  margin-left: 5px;
+  display: inline-block;
+  font-size: 20px;
+  vertical-align: middle;
 }
 .rating__subtitle {
   font-size: 26px;
   white-space: nowrap;
 }
+.rating__gradient {
+  height: 20px;
+  background: linear-gradient(to right, #000 0%, #fff 100%);
+}
+.rating__gradient i {
+  position: absolute;
+  right: 0;
+}
+li[data-rating="1"] .rating__gradient {
+  width: 1%;
+}
+li[data-rating="2"] .rating__gradient {
+  width: 2%;
+}
+li[data-rating="3"] .rating__gradient {
+  width: 3%;
+}
+li[data-rating="4"] .rating__gradient {
+  width: 4%;
+}
+li[data-rating="5"] .rating__gradient {
+  width: 5%;
+}
+li[data-rating="6"] .rating__gradient {
+  width: 6%;
+}
+li[data-rating="7"] .rating__gradient {
+  width: 7%;
+}
+li[data-rating="8"] .rating__gradient {
+  width: 8%;
+}
+li[data-rating="9"] .rating__gradient {
+  width: 9%;
+}
+li[data-rating="10"] .rating__gradient {
+  width: 10%;
+}
+li[data-rating="11"] .rating__gradient {
+  width: 11%;
+}
+li[data-rating="12"] .rating__gradient {
+  width: 12%;
+}
+li[data-rating="13"] .rating__gradient {
+  width: 13%;
+}
+li[data-rating="14"] .rating__gradient {
+  width: 14%;
+}
+li[data-rating="15"] .rating__gradient {
+  width: 15%;
+}
+li[data-rating="16"] .rating__gradient {
+  width: 16%;
+}
+li[data-rating="17"] .rating__gradient {
+  width: 17%;
+}
+li[data-rating="18"] .rating__gradient {
+  width: 18%;
+}
+li[data-rating="19"] .rating__gradient {
+  width: 19%;
+}
+li[data-rating="20"] .rating__gradient {
+  width: 20%;
+}
+li[data-rating="21"] .rating__gradient {
+  width: 21%;
+}
+li[data-rating="22"] .rating__gradient {
+  width: 22%;
+}
+li[data-rating="23"] .rating__gradient {
+  width: 23%;
+}
+li[data-rating="24"] .rating__gradient {
+  width: 24%;
+}
+li[data-rating="25"] .rating__gradient {
+  width: 25%;
+}
+li[data-rating="26"] .rating__gradient {
+  width: 26%;
+}
+li[data-rating="27"] .rating__gradient {
+  width: 27%;
+}
+li[data-rating="28"] .rating__gradient {
+  width: 28%;
+}
+li[data-rating="29"] .rating__gradient {
+  width: 29%;
+}
+li[data-rating="30"] .rating__gradient {
+  width: 30%;
+}
+li[data-rating="31"] .rating__gradient {
+  width: 31%;
+}
+li[data-rating="32"] .rating__gradient {
+  width: 32%;
+}
+li[data-rating="33"] .rating__gradient {
+  width: 33%;
+}
+li[data-rating="34"] .rating__gradient {
+  width: 34%;
+}
+li[data-rating="35"] .rating__gradient {
+  width: 35%;
+}
+li[data-rating="36"] .rating__gradient {
+  width: 36%;
+}
+li[data-rating="37"] .rating__gradient {
+  width: 37%;
+}
+li[data-rating="38"] .rating__gradient {
+  width: 38%;
+}
+li[data-rating="39"] .rating__gradient {
+  width: 39%;
+}
+li[data-rating="40"] .rating__gradient {
+  width: 40%;
+}
+li[data-rating="41"] .rating__gradient {
+  width: 41%;
+}
+li[data-rating="42"] .rating__gradient {
+  width: 42%;
+}
+li[data-rating="43"] .rating__gradient {
+  width: 43%;
+}
+li[data-rating="44"] .rating__gradient {
+  width: 44%;
+}
+li[data-rating="45"] .rating__gradient {
+  width: 45%;
+}
+li[data-rating="46"] .rating__gradient {
+  width: 46%;
+}
+li[data-rating="47"] .rating__gradient {
+  width: 47%;
+}
+li[data-rating="48"] .rating__gradient {
+  width: 48%;
+}
+li[data-rating="49"] .rating__gradient {
+  width: 49%;
+}
+li[data-rating="50"] .rating__gradient {
+  width: 50%;
+}
+li[data-rating="51"] .rating__gradient {
+  width: 51%;
+}
+li[data-rating="52"] .rating__gradient {
+  width: 52%;
+}
+li[data-rating="53"] .rating__gradient {
+  width: 53%;
+}
+li[data-rating="54"] .rating__gradient {
+  width: 54%;
+}
+li[data-rating="55"] .rating__gradient {
+  width: 55%;
+}
+li[data-rating="56"] .rating__gradient {
+  width: 56%;
+}
+li[data-rating="57"] .rating__gradient {
+  width: 57%;
+}
+li[data-rating="58"] .rating__gradient {
+  width: 58%;
+}
+li[data-rating="59"] .rating__gradient {
+  width: 59%;
+}
+li[data-rating="60"] .rating__gradient {
+  width: 60%;
+}
+li[data-rating="61"] .rating__gradient {
+  width: 61%;
+}
+li[data-rating="62"] .rating__gradient {
+  width: 62%;
+}
+li[data-rating="63"] .rating__gradient {
+  width: 63%;
+}
+li[data-rating="64"] .rating__gradient {
+  width: 64%;
+}
+li[data-rating="65"] .rating__gradient {
+  width: 65%;
+}
+li[data-rating="66"] .rating__gradient {
+  width: 66%;
+}
+li[data-rating="67"] .rating__gradient {
+  width: 67%;
+}
+li[data-rating="68"] .rating__gradient {
+  width: 68%;
+}
+li[data-rating="69"] .rating__gradient {
+  width: 69%;
+}
+li[data-rating="70"] .rating__gradient {
+  width: 70%;
+}
+li[data-rating="71"] .rating__gradient {
+  width: 71%;
+}
+li[data-rating="72"] .rating__gradient {
+  width: 72%;
+}
+li[data-rating="73"] .rating__gradient {
+  width: 73%;
+}
+li[data-rating="74"] .rating__gradient {
+  width: 74%;
+}
+li[data-rating="75"] .rating__gradient {
+  width: 75%;
+}
+li[data-rating="76"] .rating__gradient {
+  width: 76%;
+}
+li[data-rating="77"] .rating__gradient {
+  width: 77%;
+}
+li[data-rating="78"] .rating__gradient {
+  width: 78%;
+}
+li[data-rating="79"] .rating__gradient {
+  width: 79%;
+}
+li[data-rating="80"] .rating__gradient {
+  width: 80%;
+}
+li[data-rating="81"] .rating__gradient {
+  width: 81%;
+}
+li[data-rating="82"] .rating__gradient {
+  width: 82%;
+}
+li[data-rating="83"] .rating__gradient {
+  width: 83%;
+}
+li[data-rating="84"] .rating__gradient {
+  width: 84%;
+}
+li[data-rating="85"] .rating__gradient {
+  width: 85%;
+}
+li[data-rating="86"] .rating__gradient {
+  width: 86%;
+}
+li[data-rating="87"] .rating__gradient {
+  width: 87%;
+}
+li[data-rating="88"] .rating__gradient {
+  width: 88%;
+}
+li[data-rating="89"] .rating__gradient {
+  width: 89%;
+}
+li[data-rating="90"] .rating__gradient {
+  width: 90%;
+}
+li[data-rating="91"] .rating__gradient {
+  width: 91%;
+}
+li[data-rating="92"] .rating__gradient {
+  width: 92%;
+}
+li[data-rating="93"] .rating__gradient {
+  width: 93%;
+}
+li[data-rating="94"] .rating__gradient {
+  width: 94%;
+}
+li[data-rating="95"] .rating__gradient {
+  width: 95%;
+}
+li[data-rating="96"] .rating__gradient {
+  width: 96%;
+}
+li[data-rating="97"] .rating__gradient {
+  width: 97%;
+}
+li[data-rating="98"] .rating__gradient {
+  width: 98%;
+}
+li[data-rating="99"] .rating__gradient {
+  width: 99%;
+}
+li[data-rating="100"] .rating__gradient {
+  width: 100%;
+}
+[data-rating="10"] .rating__gradient,
+[data-rating="20"] .rating__gradient,
+[data-rating="30"] .rating__gradient,
+[data-rating="40"] .rating__gradient,
+[data-rating="50"] .rating__gradient,
+[data-rating="60"] .rating__gradient {
+  background: linear-gradient(to right, #d73527 0%, #fff 100%);
+}
+[data-rating="70"] .rating__gradient,
+[data-rating="80"] .rating__gradient {
+  background: linear-gradient(to right, #fef659 0%, #fff 100%);
+}
+[data-rating="90"] .rating__gradient,
+[data-rating="100"] .rating__gradient {
+  background: linear-gradient(to right, #6ae37d 0%, #fff 100%);
+}
 .rating #rating {
   display: none;
 }
 .rating #rating:checked ~ .rating__control > .rating__pseudo:after {
-  content: "@";
+  content: "☑";
+}
+.rating #rating ~ .rating__list li[data-rating="1"] {
+  order: 1;
+}
+.rating #rating ~ .rating__list li[data-rating="2"] {
+  order: 2;
+}
+.rating #rating ~ .rating__list li[data-rating="3"] {
+  order: 3;
+}
+.rating #rating ~ .rating__list li[data-rating="4"] {
+  order: 4;
+}
+.rating #rating ~ .rating__list li[data-rating="5"] {
+  order: 5;
+}
+.rating #rating ~ .rating__list li[data-rating="6"] {
+  order: 6;
+}
+.rating #rating ~ .rating__list li[data-rating="7"] {
+  order: 7;
+}
+.rating #rating ~ .rating__list li[data-rating="8"] {
+  order: 8;
+}
+.rating #rating ~ .rating__list li[data-rating="9"] {
+  order: 9;
+}
+.rating #rating ~ .rating__list li[data-rating="10"] {
+  order: 10;
+}
+.rating #rating ~ .rating__list {
+  transition: flex-direction 4s;
+  flex-direction: column;
+}
+.rating #rating:checked ~ .rating__list {
+  flex-direction: column-reverse;
+}
+.grid {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  grid-template-areas: "a b b" "c d f" "g g z" "h h h";
+  grid-gap: 10px;
+}
+.grid div {
+  background: #fff;
+  display: flex;
+  align-items: center;
+}
+.grid__h {
+  grid-area: h;
+}
+.grid__b {
+  grid-area: b;
+}
+.grid__a {
+  grid-area: a;
+}
+.grid__g {
+  grid-area: g;
+}
+.grid__z {
+  grid-area: z;
+}
+.figure {
+  margin: 0;
+  position: relative;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+  height: 100%;
+}
+.figure__img {
+  max-width: 100%;
+  margin: auto;
+  display: block;
+  min-height: 150px;
+  max-height: 300px;
+}
+.figure__caption {
+  position: absolute;
+  left: 0;
+  top: 50%;
+  line-height: 68px;
+  margin-top: -34px;
+  background: rgba(0,0,0,0.5);
+  color: #fff;
+  font-size: 34px;
+  padding: 0 10px;
+  opacity: 0;
+  transition: opacity 0.5s linear;
+}
+.figure:hover .figure__caption {
+  opacity: 1;
 }
